[package]
name = "Risy"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
koopa = "0.0.8"
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"